--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     font-family: "Lucida Console", "Courier New", monospace;   
     scroll-behavior: smooth; 
 }
-
+body{
+    margin: 0%;
+    padding: 0%;
+}
 @media only screen and (min-width:601px) {
     body{
         margin: 0%;
@@ -26,12 +29,8 @@
     .landingMsg{
         margin-top: 2%;
     }
-    .socialLinks>div:hover{
-        transition: transform .3s;
-        transform: scale(1.5);
-    }
     .ab1{
-        
+        background-color: #CFD8DC;
         height: 300px;
         display: flex;
         justify-content: center;
@@ -70,6 +69,7 @@
         margin-right: 10%;
     }
     .ab3{
+        background-color: #CFD8DC;
         height: 300px;
         display: flex;
         justify-content: center;
@@ -102,16 +102,18 @@
     .ans4{
         font-size: 1.5em;
         justify-content: center;
+        text-align: center;
     }
     
     .ab5{
+        background-color: #CFD8DC;
         height: 300px;
         display: flex;
         justify-content: center;
         align-items: center;        
     }
     .que5{
-        margin-left: 5%;
+        margin-left: 10%;
         font-size: 2em;
         text-align: center; 
         justify-content: center;
@@ -122,6 +124,13 @@
         font-size: 1.5em;
         justify-content: center;
         text-align: center;
+    }
+    #s2InnerMAinDiv:hover{
+            color: #3D7D91;        
+    }
+    .socialLinks>div:hover{
+        transition: transform .3s;
+        transform: scale(1.5);
     }
 }
 @media only screen and (max-width: 425px){
@@ -148,21 +157,96 @@
         align-items: center;
         justify-content: center;
     }
-    .ab{
+    .ab1{
         padding:10%;
-        font-size: 3vh;
     }
-    .que{
+    .que1{
+        font-size: 1.8em;
         text-align: center; 
         justify-content: center;
     }
-    .ans{
+    .ans1{
+        font-size: 1.3em;
         margin: 1vh;
         text-align: center;
     }
+    .ab2{
+        padding:10%;
+    }
+    .que2{
+        font-size: 1.8em;
+        text-align: center; 
+        justify-content: center; 
+    }
+    .ans2{
+        font-size: 1.3em;
+        margin-top: 3vh;
+        text-align: center;
+    }
+    .ab3{
+        padding:10%;
+    }
+    .que3{
+        font-size: 1.8em;
+        text-align: center; 
+        justify-content: center; 
+    }
+    .ans3{
+        font-size: 1.3em;
+        margin-top: 3vh;
+        text-align: center;
+    }
+    .ab4{
+        padding:10%;
+    }
+    .que4{
+        font-size: 1.8em;
+        text-align: center; 
+        justify-content: center; 
+    }
+    .ans4{
+        font-size: 1.3em;
+        margin-top: 3vh;
+        text-align: center;
+    }
+    .ab5{
+        padding:10%;
+        font-size: 3vh;
+    }
+    .que5{
+        font-size: 1.7em;
+        text-align: center; 
+        justify-content: center; 
+    }
+    .ans5{
+        font-size: 1em;
+        margin-top: 3vh;
+        text-align: center;
+    }
+    
 }
-nav{
-    position:fixed;
+.outerNavbar{
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    width: 100%;
+    background-color: #397686;
+}
+.navbar{
+    display: block;
+}
+.navbar>a{
+     float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.navbar>a:hover{
+    background-color: #000 ;
+    color: #397686;
 }
 .landingMsg{
     letter-spacing: -1px;
@@ -188,11 +272,8 @@ nav{
 
 footer{
     padding: 1%;
-    background-color: #E0E0E0;
-    border: 5px solid #1c4969;
-}
-footer:hover{
-    color: purple;
+    background-image: linear-gradient(#CFD8DC,#fff);
+    
 }
 footer>div{
     display: flex;
