--- a/style.css
+++ b/style.css
@@ -140,9 +140,11 @@ body{
         padding-top: 50%;
         align-items: center;
         justify-content: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         font-size: 0.850em;
         background-color: greenyellow;
-        background-image: url("");
+        background-image: url("media/landingBackground-2.png");
     }
     .landingMsg{
         margin: 4%;
