--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ body{
     padding: 0%;
 }
 @media only screen and (min-width:601px) {
-    body{
-        margin: 0%;
-        
-    }
     .mainLanding{
         font-weight: 600;
         background-image: url("media/landingBackground-2.png");
@@ -21,10 +17,10 @@ body{
         margin-left: 0%;
         margin-right: 0%;
         min-height:640px ;
-        align-items: center;
-        justify-content: center;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .landingMsg{
         margin-top: 2%;
@@ -104,7 +100,6 @@ body{
         justify-content: center;
         text-align: center;
     }
-    
     .ab5{
         background-color: #CFD8DC;
         height: 300px;
@@ -136,15 +131,14 @@ body{
 @media only screen and (max-width: 425px){
     /*Small smartphones [325px -> 425px]*/
     .mainLanding{
-        height: 460px;
+        height: 540px;
         padding-top: 50%;
         align-items: center;
         justify-content: center;
         background-repeat: no-repeat;
         background-size: cover;
-        font-size: 0.850em;
-
-        background-image: url("media/landingBackground-2.png");
+        font-size: 1em;
+        background-image: url("media/mobile background.jpg");
     }
     .landingMsg{
         margin-top: 5%;
