--- a/style.css
+++ b/style.css
@@ -123,6 +123,41 @@ body{
     #s2InnerMAinDiv:hover{
             color: #3D7D91;        
     }
+    .cMain{
+        border: 2px solid red;
+        padding-top: 4%;
+        background-image: url("media/ania-archer-HKElze1ixZY-unsplash.jpg");
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
+    .r1{
+        border: 2px solid yellow;
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        margin-top: 2%;
+    }
+    #r1{
+        margin-bottom: 2%;
+    }
+    .c1{
+        border: 2px solid rgb(0, 59, 94);
+        font-size: 1.7em;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .c2{
+        border: 2px solid green;
+        font-size: 1.7em;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     .socialLinks>div:hover{
         transition: transform .3s;
         transform: scale(1.5);
@@ -221,6 +256,31 @@ body{
         margin-top: 3vh;
         text-align: center;
     }
+    .cMain{
+        padding-top: 25%;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    .r1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .c1{
+        margin-top: 2%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .c2{
+        margin-top: 2%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 
 }
 .outerNavbar{
