--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ body{
         font-size: 1.3em;
         margin-top: 2vh;
         text-align: center;
+        line-height: 30px;
     }
     .ab2{
         padding:10%;
