--- a/style.css
+++ b/style.css
@@ -8,282 +8,6 @@ body{
     margin: 0%;
     padding: 0%;
 }
-@media only screen and (min-width:481px) {
-    .mainLanding{
-        font-weight: 600;
-        background-image: url("media/landingBackground-2.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin-left: 0%;
-        margin-right: 0%;
-        min-height:640px ;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    .landingMsg{
-        margin-top: 2%;
-    }
-    .ab1{
-        background-color: #CFD8DC;
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;        
-    }
-    .que1{
-        font-size: 2em;
-        text-align: center; 
-        justify-content: center;
-        width: 200vh;
-        padding-bottom: 2%;
-        margin-left: 40px ;
-    }
-    .ans1{
-        font-size: 1.5em;
-        justify-content: center;
-        text-align: center;
-        padding-right: 5%;
-        line-height: 30px;
-    }
-    .ab2{
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;        
-    }
-    .que2{
-        font-size: 2em;
-        text-align: center; 
-        justify-content: center;
-        width: 200vh;
-    }
-    .ans2{
-        font-size: 1.5em;
-        justify-content: center;
-        text-align: center;
-        margin-right: 10%;
-    }
-    .ab3{
-        background-color: #CFD8DC;
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;        
-    }
-    .que3{
-        font-size: 2em;
-        text-align: center; 
-        justify-content: center;
-        width: 150vh;
-        
-    }
-    .ans3{
-        font-size: 1.5em;
-        justify-content: center;
-        text-align: center;
-        margin-right: 10%;
-    }
-    .ab4{
-        height: 300px;
-        display: flex;
-        align-items: center;
-        justify-content: center;        
-    }
-    .que4{
-        font-size: 2em;
-        text-align: center; 
-        margin-right: 30%;
-    }
-    .ans4{
-        font-size: 1.5em;
-        justify-content: center;
-        text-align: center;
-    }
-    .ab5{
-        background-color: #CFD8DC;
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;        
-    }
-    .que5{
-        margin-left: 10%;
-        font-size: 2em;
-        text-align: center; 
-        justify-content: center;
-        width: 100vh;
-    }
-    .ans5{
-        padding: 10%;
-        font-size: 1.5em;
-        justify-content: center;
-        text-align: center;
-    }
-    #s2InnerMAinDiv:hover{
-            color: #3D7D91;        
-    }
-    .cMain{
-        border: 2px solid red;
-        padding-top: 4%;
-        background-image: url("media/ania-archer-HKElze1ixZY-unsplash.jpg");
-        background-repeat: no-repeat;
-        background-size: 100%;
-    }
-    .r1{
-        border: 2px solid yellow;
-        display: flex;
-        flex-direction: row;
-        text-align: center;
-        margin-top: 2%;
-    }
-    #r1{
-        margin-bottom: 2%;
-    }
-    .c1{
-        border: 2px solid rgb(0, 59, 94);
-        font-size: 1.7em;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .c2{
-        border: 2px solid green;
-        font-size: 1.7em;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .socialLinks>div:hover{
-        transition: transform .3s;
-        transform: scale(1.5);
-    }
-}
-@media only screen and (max-width: 480px){
-
-    .mainLanding{
-        height: 540px;
-        padding-top: 50%;
-        align-items: center;
-        justify-content: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        font-size: 1em;
-        background-image: url("media/mobile background.jpg");
-    }
-    .landingMsg{
-        margin-top: 5%;
-        text-align: center;
-    }
-    .landingImg{ 
-        margin-bottom: 2%;
-        justify-content: center;
-        display: flex;
-    }
-    .scDown{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .ab1{
-        padding:10%;
-    }
-    .que1{
-        font-size: 1.8em;
-        text-align: center; 
-        justify-content: center;
-    }
-    .ans1{
-        font-size: 1.3em;
-        margin-top: 2vh;
-        text-align: center;
-        line-height: 25px;
-    }
-    .ab2{
-        padding:10%;
-    }
-    .que2{
-        font-size: 1.8em;
-        text-align: center; 
-        justify-content: center; 
-    }
-    .ans2{
-        font-size: 1.3em;
-        margin-top: 2vh;
-        text-align: center;
-    }
-    .ab3{
-        padding:10%;
-    }
-    .que3{
-        font-size: 1.8em;
-        text-align: center; 
-        justify-content: center; 
-    }
-    .ans3{
-        font-size: 1.3em;
-        margin-top: 2vh;
-        text-align: center;
-    }
-    .ab4{
-        padding:10%;
-    }
-    .que4{
-        font-size: 1.8em;
-        text-align: center; 
-        justify-content: center; 
-    }
-    .ans4{
-        font-size: 1.3em;
-        margin-top: 2vh;
-        text-align: center;
-    }
-    .ab5{
-        padding:10%;
-    }
-    .que5{
-        font-size: 1.8em;
-        text-align: center; 
-        justify-content: center; 
-    }
-    .ans5{
-        font-size: 1.2em;
-        margin-top: 2vh;
-        text-align: center;
-    }
-    .cMain{
-        padding-top: 25%;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-    }
-    .r1{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .c1{
-        margin-top: 2%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .c2{
-        margin-top: 2%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #r1{
-        margin-bottom: 2%;
-    }
-}
 .outerNavbar{
     display: flex;
     position: fixed;
@@ -332,6 +56,7 @@ body{
 footer{
     padding: 1%;
     background-image: linear-gradient(#CFD8DC,#fff);
+    border-top:1px solid #000;
     
 }
 footer>div{
@@ -355,4 +80,3 @@ Hr{
 .cpyRights{
     margin-top: 1%;
 }
-
