navbar fixed  and  gave shadow

--- a/mobile.css
+++ b/mobile.css
@@ -12,11 +12,16 @@
     margin-top: 5%;
     text-align: center;
 }
-.landingImg{ 
+.landingImgDiv{ 
     margin-bottom: 2%;
     justify-content: center;
-    display: flex;
-    filter: drop-shadow(0px 0px 30px  black);
+    display: flex; 
+}
+.landingImgDiv>img{
+    filter: drop-shadow(0px 0px 30px black);
+}
+.outerNavbar{
+    z-index: 2;
 }
 .scDown{
     display: flex;
